--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -22,7 +22,7 @@ When examining this analysis, we should keep in mind that the generateCell, coor
 
 \section{Recoding parts of the software to be more hardware friendly}
 
-Back in 2011, Vermij E. did a thesis on RVE (recursive variable expansion). In it, he discusses the most efficient ways to program a processing element to generate one value in the alignment matrix. His results can be found in figure \ref{fig:PE}. 
+Back in 2011, Vermij E. did a thesis on RVE (recursive variable expansion). He discusses the most efficient ways to program a processing element to generate one value in the alignment matrix. His results can be found in figure \ref{fig:PE}. 
 
 \begin{figure}[H]
 	%src=file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20Smith-Waterman%20op%20FPGA%20(TU%20Delft).pdf
