--- a/H8_conclusions.tex
+++ b/H8_conclusions.tex
@@ -17,6 +17,8 @@
 
 Gap opening and extension
 
+In a sequence, a base may be suddenly marked with an 'N' character, which means after the primary processing the process was unable to identify the base. Because of the way the sequencing machines work, this mostly happens at the end of the sequence. So, it was decided to only cut the sequence short at the moment an 'N' character is registered.
+
 BFAST algorithm
 
 BASE type memory efficient
