--- a/afkortingen.tex
+++ b/afkortingen.tex
@@ -5,6 +5,7 @@
 \textbf{A} - \textit{Adenine} - One of the 4 nitrogen bases present in DNA \\
 \textbf{ASIC} - \textit{Application Specific Integrated Circuit} - An integrated circuit especially designed for a specific application \\
 \textbf{BAM} - \textit{Binary Alignment Map} - The file format used for storing mapped reads, binary \\
+\textbf{BLAST} - \textit{Basic Local Alignment Search Tool} - A heurisitic algorithm for finding local alignments\\
 \textbf{bp} - \textit{base pairs} - 2 nitrogen bases that are connected with hydrogen bonds in DNA. Adenine is connected with Thymine, Guanine with Cytosine \\
 \textbf{C} - \textit{Cytosine} - One of the 4 nitrogen bases present in DNA \\
 \textbf{cfDNA} - \textit{cell-free DNA} - cell free DNA, which is found in the blood plasma \\
