--- a/fiiw.sty
+++ b/fiiw.sty
@@ -247,11 +247,11 @@
 				\ifx \@promotorBname \@empty
 				\else
 					%\item[ ]
-					\item[\@promotorBtype:\hfill] \@promotorBname
+					\item[\@promotorBtype\hfill] \@promotorBname
 				\fi
  				\ifx \@promotorCname \@empty
  				\else 
- 					\item[\@promotorCtype \hfill] \hspace{2pt} \@promotorCname
+ 					\item[\@promotorCtype:\hfill]\@promotorCname
  				\fi
 			\end{list}
 		}
