--- a/thesis.tex
+++ b/thesis.tex
@@ -112,7 +112,7 @@
 %\embargo{25-10-2015}
 
 \title{Using an MPSoC to \newline implement DNA sequence alignment}
-\subtitle{An implementation and acceleration of the Smith-Waterman \newline algorithm}
+\subtitle{Implementation and acceleration of the Smith-Waterman \newline algorithm}
 % \author{naam student}
 \forenameA{Robin}
 \surnameA{Nollet}
