--- a/voorwoord.tex
+++ b/voorwoord.tex
@@ -1,4 +1,4 @@
-From the Brno University of Technology I would like to thank the following people:
+From the Brno University of Technology (BUT) I would like to thank the following people:
 \begin{itemize}
 	\item \textbf{Ing. V\'aclav \v Simek} as my supervisor for providing feedback on the process of executing this thesis, as well as helping with the administrative side of the Erasmus exchange and recommending courses at BUT.
 	\item \textbf{Ing. Tom\'a\v s Mart\'inek, Ph.D.} for providing the learning materials towards HLS and to point out the idea behind the BFAST algorithm.
@@ -8,13 +8,13 @@ From the Brno University of Technology I would like to thank the following peopl
 From KU Leuven I would like to thank the following people:
 \begin{itemize}
 	\item \textbf{Ing. Jonas Lannoo
-		Ph.D. Student} as a supervisor for his support from Belgium during my Erasmus towards the thesis.
+		Ph.D. Student} as a supervisor for his support during my Erasmus towards the thesis.
 	\item \textbf{Ing. Sammy Verslype} for the original idea to try and pick a subject where I try to accelerate an algorithm using an FPGA equipped platform.
 \end{itemize} 
 
-I would also want to thank \textbf{Friedel Nollet, Ph.D.} for the original idea of implementing the genome mapping problem, as well as fact-checking my thesis for the biology part and providing me with sample data.
+I would also want to thank my father \textbf{Friedel Nollet, Ph.D.} (molecular biologist at the AZ Sint-Jan Hospital in Bruges) for the original idea of implementing the genome mapping problem, as well as fact-checking my thesis for the biology part and providing me with sample data.
 
-This thesis was executed during my time on an Erasmus exchange with the Brno Univerity of Technology. I would also want to thank the BUT for accepting me as an incoming Erasmus student.
+This thesis was executed during my time as an Erasmus exchange student at the Brno Univerity of Technology. I would also want to thank the BUT for accepting me as an incoming Erasmus student.
 
 Furthermore, I would like to thank \textbf{ir. Joan Peuteman, Ph.D.}, \textbf{ir. Hilde Bonte} and \textbf{Ing. Michaela Studena} for helping me in the administration needed for the Erasmus exchange.
 
