--- a/H1_Inleiding.tex
+++ b/H1_Inleiding.tex
@@ -8,20 +8,20 @@
 
 //TODO zoeken voor een goed figuurtje om de tekst wat te breken.
 
-Over the last few decades, biologists have made major steps in trying to understand life; animals, humans, and plants. Since the rise of sequencing techniques, genomics has become an emerging field within biology. However, genomic applications are often very computationally demanding, due to the size of the involved datasets, such as the 3 billion base pair human genome.
+Over the last few decades, biologists have made major steps in trying to understand life; animals, humans, and plants. Since the rise of DNA sequencing techniques, genomics has become an emerging field within biology. However, genomic applications are often very computationally demanding, due to the size of the involved datasets, for example when analyzing the 3 billion base pairs of the human genome.
 
-One interesting application in genomics is short read genome mapping, which attempts to locate a short read of DNA on the full genome. If enough of such short reads are mapped, some interesting results can be achieved. For example, if enough reads are mapped, we can extrapolate the full genome of the organism. Even the amount of reads in one place (referred to as the reading depth) can give useful information, such as an abnormal amount of chromosomes.
+One fundamental application in genomics is short read genome mapping, which attempts to locate a short read of DNA on the full genome. If enough of such short reads are mapped, some interesting results can be achieved. For example, if enough reads are mapped, we can extrapolate the full genome of the organism. Even the amount of reads in one place (referred to as the reading depth) can give useful information, e.g. the presence of a trisomy of chromosome-21 in Down syndrome patients.
 
 A full genome cannot be determined immediately, because the machines that determine this sequence can only handle short reads consisting of a few hundred bases. These sequencing machines are currently capable of producing millions of reads per day, and their throughput is growing at an exponential rate. This exponential growth should be accompanied by an improvement in genome mapping techniques, to keep up with the throughput of these machines. However, most of the current software tools used for genome mapping are run on traditional CPUs. 
 
-This thesis will develop an implementation on an MPSoC (Multi-Processor System on Chip), which has an amount of programmable logic available to accelerate some aspects of the currently used algorithms. As a sample set, the PhiX and SARS-CoV-2 viruses will be explored. However, the algorithms discussed in this thesis can be expanded to the full human genome.
+This thesis will implement genome mapping on an MPSoC (Multi-Processor System on Chip), which has an amount of programmable logic available to accelerate some aspects of the currently used algorithms. As a sample set, DNA sequencing reads of the PhiX and SARS-CoV-2 viruses will be explored. However, the algorithms discussed in this thesis can be expanded to the full human genome, where there is a high need for accelerating the algorithm and thus reducing the time-to-result of clinical tests.
 
 The further chapters of this thesis are organized as follows:
 
-\paragraph{chapter \ref{ch:MBbackground}:} The theoretical background in genetics, molecular biology, and DNA, As well as the sequencing technology.
-\paragraph{chapter \ref{ch:algoverzicht}:} The theoretical background regarding alignment, existing alignment algorithms, As well as the problem statement with clinical applications.
-\paragraph{chapter \ref{ch:Platforms}:} The theoretical background on existing implementations of the Smith-Waterman algorithm on different kinds of hardware, As well as the hardware selection process.
-\paragraph{chapter \ref{ch:InitDiff}:} A chapter which could be less interesting if the reader is interested in the theory. It covers the difficulties I had when learning the required programming techniques, covering High-Level Synthesis and SDSoC. 
-\paragraph{chapter \ref{ch:SoftwareImpl}:} A detailed description of the developed software implementation, As well as the results achieved with this implementation.
+\paragraph{chapter \ref{ch:MBbackground}:} The theoretical background in genetics, molecular biology, and DNA, as well as the sequencing technology.
+\paragraph{chapter \ref{ch:algoverzicht}:} The theoretical background regarding alignment, existing alignment algorithms, as well as the problem statement with some example clinical applications.
+\paragraph{chapter \ref{ch:Platforms}:} The theoretical background on existing implementations of the Smith-Waterman algorithm on different kinds of hardware, as well as the hardware selection process.
+\paragraph{chapter \ref{ch:InitDiff}:} A chapter which covers the difficulties I had when learning the required programming techniques, covering High-Level Synthesis and SDSoC. 
+\paragraph{chapter \ref{ch:SoftwareImpl}:} A detailed description of the developed software implementation, as well as the results achieved with this implementation.
 \paragraph{chapter \ref{ch:HardwareImpl}:} //TODO
 \paragraph{chapter \ref{ch:Conclusions}:} //TODO
